# googlefonts-markup

./: .buildinfo  .gitignore  CHANGES.rst  README.rst  googlefonts_markup.py  index.html  objects.inv  pyproject.toml  searchindex.js  setup.cfg
.github/workflows/: main.yml  testing.yml
_sources/: index.rst.txt
_static/css/: pyscript-repl.css
doc/: conf.py  index.rst
doc/libs/: sphinx_pyscript.py
genindex/: index.html
googlefonts_markup/: __init__.py  models.py  shortcuts.py
googlefonts_markup/ext/: sphinx.py
search/: index.html
tests/: test_axis.py  test_font.py  test_fontset.py
