[tool.poetry]
name = "googlefonts-markup"
version = "0.2.0"
description = "Small utility to use Google Fonts for markup files"
authors = ["Kazuya Takei <myself@attakei.net>"]
license = "Apache-2.0"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Environment :: Other Environment",
  "Environment :: Web Environment",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Topic :: Text Processing :: Markup",
  "Topic :: Text Processing :: Markup :: HTML",
  "Topic :: Utilities",
]
readme = "README.rst"

[tool.poetry.dependencies]
python = "^3.8 | ^3.9 | ^3.10"
pydantic = "*"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
doc8 = "^0.10.1"
flake8 = "^4.0.1"
black = "^22.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
